--- a/admin/app/templates/user/add.html
+++ b/admin/app/templates/user/add.html
@@ -10,7 +10,7 @@
         {{ form.hidden_tag() }}
         {{ render_field(form.username) }}
         {{ render_field(form.password) }}
-        <p><button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" type="submit"> Login </button></p>
+        <p><button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" type="submit"> Add </button></p>
     </form>
     </div>
     <div class="mdl-layout-spacer"></div>
