--- a/admin/app/templates/user/remove.html
+++ b/admin/app/templates/user/remove.html
@@ -9,7 +9,7 @@
     <form id="loginForm" class="form form-register" method="POST" action="" role="form">
         {{ form.hidden_tag() }}
         {{ render_field(form.username) }}
-        <p><button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" type="submit"> Login </button></p>
+        <p><button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" type="submit"> Remove </button></p>
     </form>
     </div>
     <div class="mdl-layout-spacer"></div>
