--- a/admin/app/templates/nav.html
+++ b/admin/app/templates/nav.html
@@ -1,6 +1,6 @@
 <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
     <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Population</span>
+        <span class="mdl-layout-title">Admin</span>
         <div class="mdl-layout-spacer"></div>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
     </div>
